[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.2.6",
    "openai==0.28",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "torch>=2.5.1",
]






[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
environments = ["python_version == '3.10'"]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux'",
]
